--- a/pub.html
+++ b/pub.html
@@ -121,13 +121,13 @@ td.papers {
 						  <b>Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:</b>
 						  </font>
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
+						  * <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
+						  * <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
+						  * <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/e4778a0ef322834718f8e42da3901eb99fef1208" target="_blank">x86/kprobes: Refactor can_{probe,boost} return type to bool</a>
+						  * <a href="https://github.com/torvalds/linux/commit/e4778a0ef322834718f8e42da3901eb99fef1208" target="_blank">x86/kprobes: Refactor can_{probe,boost} return type to bool</a>
 						</span>
 				  </div>
 		</td>
@@ -583,6 +583,9 @@ td.papers {
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
 						  Code/data: <a href="https://github.com/TrinityEmulator" target="_blank">https://github.com/TrinityEmulator</a>
+						  <br>
+						  A journal version is published at the ACM Transactions on Computer Systems (<a href="https://dl.acm.org/doi/10.1145/3643029" target="_blank">link</a>)
+                                              	  <br>
 					  </span>
 				  </div>
 		  </td>
