--- a/pub.html
+++ b/pub.html
@@ -121,13 +121,15 @@ td.papers {
 						  <b>Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:</b>
 						  </font>
 						  <br>
-						  * <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
+						  <font size="2">
+						  - <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
 						  <br>
-						  * <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
+						  - <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
 						  <br>
-						  * <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
+						  - <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
 						  <br>
-						  * <a href="https://github.com/torvalds/linux/commit/e4778a0ef322834718f8e42da3901eb99fef1208" target="_blank">x86/kprobes: Refactor can_{probe,boost} return type to bool</a>
+						  - <a href="https://github.com/torvalds/linux/commit/e4778a0ef322834718f8e42da3901eb99fef1208" target="_blank">x86/kprobes: Refactor can_{probe,boost} return type to bool</a>
+						  </font>
 						</span>
 				  </div>
 		</td>
@@ -376,6 +378,8 @@ td.papers {
 						  In Proceedings of the 50th Annual International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'23</b></font>), Orlando, FL, June 2023.
 						  <br>
 						  Artifact: <a href="https://github.com/xlab-uiuc/mxfaas" target="_blank">https://github.com/xlab-uiuc/mxfaas</a>
+						  <br>
+						  US Patent: <a href="https://patents.google.com/patent/US20240134698A1" target="_blank">Serverless computing using resource multiplexing</a>
 					  </span>
 				  </div>
 		  </td>
@@ -818,7 +822,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
 						<br>
-            					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
+            					Xudong Sun, Runxiang Cheng, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
