--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						      <p class="STYLE223">2024 <a href="pub/osdi24_award_anvil.pdf" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'24 (<a href="pub/anvil.pdf" target="_blank">Anvil</a>)</p>
 						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
+						      <p class="STYLE223">2024 (Spring) UIUC List of Teachers Ranked as Excellent (CS 591SN)</p>
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23 (<a href="pub/csi-failures.pdf" target="_blank">CSI Failures</a>)</p>
 						      <p class="STYLE223">2023 (Fall) UIUC List of Teachers Ranked as Excellent (CS 591SN)</p>
 	                          <p class="STYLE223">2023 (Spring) UIUC List of Teachers Ranked as Excellent (CS 523)</p>
