--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		    <a href="https://acm-ieee-sec.org/2024/" target="_blank">SEC</a>,
 		    <a href="https://conferences.sigcomm.org/sigcomm/2024/workshop/ebpf/" target="_blank">eBPF</a>,
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
+			<a href="https://sysdw24.github.io" target="_blank">SOSP DW</a>,
 	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
@@ -590,7 +591,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	-->							<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Quan Hao Ng</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
-								<p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now), on leave for <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a>, Undergraduate Student (Zhejiang University) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
