--- a/pub.html
+++ b/pub.html
@@ -60,6 +60,55 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+
+	<tr>
+		<td class="date"><font color="#083b89">ICSE'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Large Language Models as Configuration Validators</strong> [<a href="pub/ciri.pdf" target="_blank">pdf</a> | <a href="pub/ciri_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Xinyu Lian, Yinfang Chen, Runxiang Cheng, Jie Huang, Parth Thakkar, Minjia Zhang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">EuroSys'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Multi-Grained Specifications for Distributed System Model Checking and Verification</strong> [<a href="pub/mspec.pdf" target="_blank">pdf</a> | <a href="pub/mspec_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Lingzhi Ouyang, Xudong Sun, Ruize Tang, Yu Huang, Madhav Jivrajani, Xiaoxing Ma, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 20th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'25</b></font>), Rotterdam, The Netherlands, Mar. 2024.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">SOSP'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>vSoC: Efficient Virtual System-on-Chip on Heterogeneous Hardware</strong> [<a href="pub/vsoc.pdf" target="_blank">pdf</a> | <a href="pub/vsoc_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jiaxing Qiu, Zijie Zhou, Yang Li, Zhenhua Li, Feng Qian, Hao Lin, Di Gao, Haitao Su, Xin Miao, Yunhao Liu, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 30th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'24</b></font>), Austin, TX, USA, Nov. 2024.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
 	<tr>
 		<td class="date"><font color="#083b89">OSDI'24</font></td>
 			<td class="papers">
