--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data ontap.
       I had a short experience at <a href="https://whova.com/" target="_blank">Whova</a>
       where I learned dedication.
-      I worked in Germany and backpacked Europe for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before starting my grad school.
+      I worked in Germany at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> and backpacked Europe for 1.5 years before starting my grad school.
     </p>
 
     <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what matters to the living or the dead.
