--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	          </p>
 	          <p class="STYLE223">2025
 		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
-		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers/" target="_blank">ASPLOS</a>,
+		    <a href="https://2025.eurosys.org" target="_blank">EuroSys</a>,
+		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers" target="_blank">ASPLOS</a>,
 		    <a href="https://www.usenix.org/conference/nsdi25" target="_blank">NSDI</a>,
 		    <a href="https://hpca-conf.org/2025/" target="_blank">HPCA</a>,
 	          </p>
@@ -516,7 +517,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		    <a href="https://acm-ieee-sec.org/2024/" target="_blank">SEC</a>,
 		    <a href="https://conferences.sigcomm.org/sigcomm/2024/workshop/ebpf/" target="_blank">eBPF</a>,
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
-			<a href="https://sysdw24.github.io" target="_blank">SOSP DW</a>,
+		    <a href="https://sysdw24.github.io" target="_blank">SOSP DW</a>,
+		    <a href="https://sigops.org/s/conferences/sosp/2024/cfpo.html" target="_blank">SOSP Poster</a>,
 	          </p>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
