--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,24 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://jovans2.github.io" target="_blank">Jovan Stojkovic</a></strong>
+	    <br>
+	    Chasing the Tail at Scale: Towards Cloud-Native Processor Architectures
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://jasondliu.com" target="_blank">Jason Liu</a></strong>
 	    <br>
 	    Designing and Analyzing Security Systems via Analysis of Log Data
