--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,7 +90,7 @@ td.papers {
 	    <br>
 	    Chasing the Tail at Scale: Towards Cloud-Native Processor Architectures
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 13, 2024.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
