--- a/index.html
+++ b/index.html
@@ -596,7 +596,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now), on leave for <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a>, Undergraduate Student (Zhejiang University) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shurang Wu</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
 				      <!--
@@ -629,6 +628,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
 				  <p class="STYLE224"># Bachelors</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://moogician.github.io/" target="_blank">Hao (Tony) Wang</a> (Peking U.), UIUC+ SUR in SE, Summer 2023 co-hosted by <a href="https://mir.cs.illinois.edu/marinov" target="_blank">Darko Marinov</a> &rarr; University of California Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
