--- a/travel.html
+++ b/travel.html
@@ -136,7 +136,7 @@ div.Section1
                                                   <ul style="list-style-type:circle">
                                                     <li>Innsbruck (2011)</li>
                                                     <li>Salzburg (2010)</li>
-                                                    <li>Vienna (2011) </li>
+                                                    <li>Vienna (2011, 2024) </li>
                                                   </ul>
                                                 </li>
 				                <li><font color="#083b89"><b>Belgium</b></font>:
@@ -304,7 +304,9 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>Mexico</b></font>:
                                                   <ul style="list-style-type:circle">
+						     <li>Cancún (2024) </li>
 						     <li>Tijuana (2015) </li>
+						     <li>Valladolid (2024) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Norway</b></font>:
@@ -338,6 +340,7 @@ div.Section1
 						<li><font color="#083b89"><b>Spain</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Barcelona (2010) </li>
+						     <li>Madrid (2024) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Sweden</b></font>:
@@ -366,8 +369,8 @@ div.Section1
 						    <li>Albany, NY (2023) </li>
 						    <li>Alexandria, VA (2018) </li>
 						    <li>Annapolis, MD (2017) </li>
-					        <li>Arlington, VA (2018) </li>
-					        <li>Ashland, WI (2022) </li>
+					            <li>Arlington, VA (2018) </li>
+					            <li>Ashland, WI (2022) </li>
 						    <li>Atlanta, GA (2017) </li>
 						    <li>Baltimore, MD (2017) </li>
 						    <li>Berkeley, CA (2015, 2018) </li>
