--- a/pub.html
+++ b/pub.html
@@ -160,7 +160,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						  <strong>Fast (Trapless) Kernel Probes Everywhere</strong> [<a href="pub/uno-kprobe.pdf" target="_blank">pdf</a> | <a href="pub/uno-kprobe_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jinghao Jia, Michael Le, Salman Ahmed, Dan Williams, Hani Jamjoom, and Tianyin Xu
+						  Jinghao Jia, Michael V. Le, Salman Ahmed, Dan Williams, Hani Jamjoom, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
 						  <br>
@@ -228,7 +228,7 @@ td.papers {
 						  <br>
 						  Jiyuan Zhang, Weiwei Jia, Siyuan Chai, Peizhe Liu, Jongyul Kim, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA Apr. 2024.
+						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA, Apr. 2024.
 						  <br>
 						  Artifact: <a href="https://github.com/xlab-uiuc/dmt" target="_blank">https://github.com/xlab-uiuc/dmt</a>
 					  </span>
