--- a/travel.html
+++ b/travel.html
@@ -373,7 +373,7 @@ div.Section1
 					            <li>Ashland, WI (2022) </li>
 						    <li>Atlanta, GA (2017) </li>
 						    <li>Baltimore, MD (2017) </li>
-						    <li>Berkeley, CA (2015, 2018) </li>
+						    <li>Berkeley, CA (2018, 2024) </li>
 						    <li>Big Sur, CA (2017) </li>
 					            <li>Bloomington, IL (2020, 2023) </li>
 						    <li>Bloomington, IN (2021) </li>
@@ -449,6 +449,7 @@ div.Section1
 						    <li>San Diego, CA (2011-2017) </li>
 						    <li>San Francisco, CA (2017,2023) </li>
 						    <li>San Jose, CA (2017) </li>
+							<li>San Pablo, CA (2024)</li>
 						    <li>Sandusky, OH (2021) </li>
 						    <li>Santa Barbara, CA (2017) </li>
 						    <li>Santa Clara, CA (2012, 2015, 2017, 2018, 2024) </li>
