--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,38 @@ td.papers {
   <tbody>
 
 	<tr>
+		<td class="date"><font color="#083b89">EuroSys'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Multi-Grained Specifications for Distributed System Model Checking and Verification</strong> [<a href="pub/mspec.pdf" target="_blank">pdf</a> | <a href="pub/mspec_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Lingzhi Ouyang, Xudong Sun, Ruize Tang, Yu Huang, Madhav Jivrajani, Xiaoxing Ma, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 20th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">ASPLOS'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>M5: Mastering Page Migration and Memory Management for CXL-based Tiered Memory Systems</strong> [<a href="pub/m5.pdf" target="_blank">pdf</a> | <a href="pub/m5_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yan Sun, Jongyul Kim, Douglas Yu, Jiyuan Zhang, Siyuan Chai, Michael Jaemin Kim, Hwayong Nam, Jaehyun Park, Eojin Na, Yifan Yuan, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
+						  <br>
+						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">ICSE'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -72,22 +104,6 @@ td.papers {
 						  Xinyu Lian, Yinfang Chen, Runxiang Cheng, Jie Huang, Parth Thakkar, Minjia Zhang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
-					  	</span>
-				  </div>
-		</td>
-	</tr>
-
-	<tr>
-		<td class="date"><font color="#083b89">EuroSys'25</font></td>
-			<td class="papers">
-				  <div align="justify" class="STYLE4">
-					<p></p>
-						<span style="font-size: 12pt;">
-						  <strong>Multi-Grained Specifications for Distributed System Model Checking and Verification</strong> [<a href="pub/mspec.pdf" target="_blank">pdf</a> | <a href="pub/mspec_bib.txt" target="_blank">bib</a>]
-						  <br>
-						  Lingzhi Ouyang, Xudong Sun, Ruize Tang, Yu Huang, Madhav Jivrajani, Xiaoxing Ma, and Tianyin Xu
-						  <br>
-						  In Proceedings of the 20th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'25</b></font>), Rotterdam, The Netherlands, Mar. 2025.
 					  	</span>
 				  </div>
 		</td>
@@ -108,6 +124,22 @@ td.papers {
 				  </div>
 		</td>
 	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">MobiCom'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Rethinking Process Management for Interactive Mobile Systems</strong> [<a href="pub/mobile-proc.pdf" target="_blank">pdf</a> | <a href="pub/mobile-proc_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jianwei Zheng, Zhenhua Li, Feng Qian, Wei Liu, Hao Lin, Yunhao Liu, Tianyin Xu, Nan Zhang, Ju Wang, and Cang Zhang
+						  <br>
+						  In Proceedings of the 30th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'24</b></font>), Washington, D.C., Nov. 2024.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
 
 	<tr>
 		<td class="date"><font color="#083b89">OSDI'24</font></td>
@@ -228,7 +260,7 @@ td.papers {
 						  <br>
 						  Jiyuan Zhang, Weiwei Jia, Siyuan Chai, Peizhe Liu, Jongyul Kim, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA Apr. 2024.
+						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA, Apr. 2024.
 						  <br>
 						  Artifact: <a href="https://github.com/xlab-uiuc/dmt" target="_blank">https://github.com/xlab-uiuc/dmt</a>
 					  </span>
