--- a/index.html
+++ b/index.html
@@ -617,12 +617,12 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
 				  <p class="STYLE224"># Maesters</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS 2024 (thesis) &rarr; Cornell University (PhD)</p>
-				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (<a href="thesis/LIAN-THESIS-2024.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
-				  <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS 2024 (thesis), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a> &rarr; AMD Research</p>
-				  <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS 2024 (<a href="thesis/ZHANG-THESIS-2024.pdf" target="_blank">thesis</a>) &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (<a href="thesis/LIAN-THESIS-2024.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu" target="_blank">Pratik Rajesh Sampat</a>, MS 2024 (thesis), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a> &rarr; AMD Research</p>
+				  <p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, MS 2024 (<a href="thesis/ZHANG-THESIS-2024.pdf" target="_blank">thesis</a>) &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ruowen-qin-1323ab149" target="_blank">Ruowen Qin</a>, MCS 2023 &rarr; Red Hat</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS 2023 (<a href="thesis/LUO-THESIS-2023.pdf" target="_blank">thesis</a>), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a> &rarr; Apple (Cloud Infra)</p>
-				  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS 2023 (<a href="thesis/THAKKAR-THESIS-2023.pdf" target="_blank">thesis</a>) &rarr; Meta (Dev Infra)</p>
+				  <p class="STYLE223"><a href="https://thakkarparth007.github.io" target="_blank">Parth Thakkar</a>, MS 2023 (<a href="thesis/THAKKAR-THESIS-2023.pdf" target="_blank">thesis</a>) &rarr; Meta (Dev Infra)</p>
 	              		  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="thesis/CHEN-THESIS-2021.pdf" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="thesis/YOO-THESIS-2021.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, awarded <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
@@ -633,20 +633,20 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://moogician.github.io/" target="_blank">Hao (Tony) Wang</a> (Peking U.), UIUC+ SUR in SE, Summer 2023 co-hosted by <a href="https://mir.cs.illinois.edu/marinov" target="_blank">Darko Marinov</a> &rarr; University of California Berkeley (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
-				  <p class="STYLE223"><a href="https://irisesd.github.io/" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, 2023-2024, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
-				  <p class="STYLE223"><a href="https://zichengma.github.io/" target="_blank">Zicheng Ma</a>, BE, 2023-2024 awarded
+				  <p class="STYLE223"><a href="https://fanchung.net" target="_blank">Fan Chung</a>, (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
+				  <p class="STYLE223"><a href="https://irisesd.github.io" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, 2023-2024, co-advised by <a href="https://www.cs.cornell.edu/~legunsen" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
+				  <p class="STYLE223"><a href="https://zichengma.github.io" target="_blank">Zicheng Ma</a>, BE, 2023-2024 awarded
 					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Harvard University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE, 2023 &rarr; UIUC (MS) </p>
-				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
-				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
+				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
+				  <p class="STYLE223"><a href="https://nsdi.dev" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
-				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue University (MS)</p>
-	              		  <p class="STYLE223"><a href="https://whentojump.xyz/">Wentao Zhang</a> (SJTU), UIUC+ SUR in SE, 2022 &rarr; UIUC (PhD)</p>
-				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://taham0.github.io" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue University (MS)</p>
+	              		  <p class="STYLE223"><a href="https://whentojump.xyz">Wentao Zhang</a> (SJTU), UIUC+ SUR in SE, 2022 &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS)</p>    
-				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele/" target="_blank">Kele Huang</a> (CAS), UIUC+ SUR in SE, 2021 &rarr; Columbia University (PhD)</p>
-				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a> (USTC), UIUC+ SUR in SE, 2021 &rarr; Purdue University (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele" target="_blank">Kele Huang</a> (CAS), UIUC+ SUR in SE, 2021 &rarr; Columbia University (PhD)</p>
+				  <p class="STYLE223"><a href="https://fanweneddie.github.io" target="_blank">Wen Fan</a> (USTC), UIUC+ SUR in SE, 2021 &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BE 2021,
 					  awarded 
 					  <a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a> and 
