--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					          <p class="STYLE223">2017 <a href="https://cse.ucsd.edu/graduate/cse-department-awards" target="_blank">UCSD CSE Doctoral Award for Research</a></p>
 						      <p class="STYLE223">2016 <a href="https://cns.ucsd.edu/best-paper-award-received-at-the-osdi-2016-conference/" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'16 (<a href="pub/pcheck.pdf" target="_blank">PCheck</a>)</p>
 						      <p class="STYLE223">2010 Erasmus Mundus LiSUM Scholarship</p>
-						      <p class="STYLE223">2009 Best Paper Award at ICC'09 (<a href="pub/icc09.pdf" target="_blank">dtree-stream</a>)</p>
+						      <p class="STYLE223">2009 Best Paper Award at ICC'09 (<a href="pub/icc09.pdf" target="_blank">DTStream</a>)</p>
 						</TD>
             </TR>
                     <TD width="0.5%">&nbsp;</TD>
@@ -590,8 +590,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Alan Andrade</a>, MCS Student (Fall 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Zhen Tang</a>, MCS Student (Summer 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS Student (Fall 2024 - now)</p>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	
 	-->							<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
