--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -151,24 +151,6 @@ td.papers {
         </div>
       </td>
   </tr>
-  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
-            <strong><a href="https://kychou.net/" target="_blank">Kuan-Yen Chou</a></strong>
-	    <br>
-	    Scalable Verification of Complex Networks
-	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on April 16, 2024.
-            <br>
-            Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
-          </span>
-        </div>
-      </td>
-  </tr>
 
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -201,6 +183,24 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec. 8, 2023.
             <br>
             Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://kychou.net/" target="_blank">Kuan-Yen Chou</a></strong>, Ph.D.
+	    <br>
+	    Scalable Verification of Complex Networks
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Oct. 21, 2024.
+            <br>
+            Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
           </span>
         </div>
       </td>
