--- a/pub.html
+++ b/pub.html
@@ -94,6 +94,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">NSDI'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Dissecting and Streamlining the Interactive Loop of Mobile Cloud Gaming</strong> [<a href="pub/vsync.pdf" target="_blank">pdf</a> | <a href="pub/vsync_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yang Li, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Feng Qian, Jing Yang, Hao Lin, Yunhao Liu, Bo Xiao, Xiaokang Qin, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 22nd USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'25</b></font>), Philadelphia, PA, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">ICSE'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
