--- a/pub.html
+++ b/pub.html
@@ -147,7 +147,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Rethinking Process Management for Interactive Mobile Systems</strong> [<a href="pub/mobile-proc.pdf" target="_blank">pdf</a> | <a href="pub/mobile-proc_bib.txt" target="_blank">bib</a>]
+						  <strong>Rethinking Process Management for Interactive Mobile Systems</strong> [<a href="pub/mproc.pdf" target="_blank">pdf</a> | <a href="pub/mproc_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Jianwei Zheng, Zhenhua Li, Feng Qian, Wei Liu, Hao Lin, Yunhao Liu, Tianyin Xu, Nan Zhang, Ju Wang, and Cang Zhang
 						  <br>
