--- a/pub.html
+++ b/pub.html
@@ -115,6 +115,22 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
+						  <strong>Fidelity of Cloud Emulators: The Imitation Game of Testing Cloud-based Software</strong> [<a href="pub/cloudtest.pdf" target="_blank">pdf</a> | <a href="pub/cloudtest_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Anna Mazhar, Saad Sher Alam, William Zheng, Yinfang Chen, Suman Nath, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+	  
+	<tr>
+		<td class="date"><font color="#083b89">ICSE'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
 						  <strong>Large Language Models as Configuration Validators</strong> [<a href="pub/ciri.pdf" target="_blank">pdf</a> | <a href="pub/ciri_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Xinyu Lian, Yinfang Chen, Runxiang Cheng, Jie Huang, Parth Thakkar, Minjia Zhang, and Tianyin Xu
