--- a/pub.html
+++ b/pub.html
@@ -151,7 +151,7 @@ td.papers {
 						  <br>
 						  Jiaxing Qiu, Zijie Zhou, Yang Li, Zhenhua Li, Feng Qian, Hao Lin, Di Gao, Haitao Su, Xin Miao, Yunhao Liu, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 30th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'24</b></font>), Austin, TX, USA, Nov. 2024.
+						  In Proceedings of the 30th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'24</b></font>), Austin, TX, Nov. 2024.
 					  	</span>
 				  </div>
 		</td>
