--- a/pub.html
+++ b/pub.html
@@ -168,6 +168,8 @@ td.papers {
 						  Jiaxing Qiu, Zijie Zhou, Yang Li, Zhenhua Li, Feng Qian, Hao Lin, Di Gao, Haitao Su, Xin Miao, Yunhao Liu, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 30th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'24</b></font>), Austin, TX, Nov. 2024.
+						  <br>
+						  Project: <a href="https://github.com/VirtualSoC" target="_blank">https://github.com/VirtualSoC</a>
 					  	</span>
 				  </div>
 		</td>
