--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TD class=content width="96%">
 							<p class="STYLE223">Three USENIX ;login: magazine articles on
 								<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">Anvil</a>, 
-								<a href="https://www.usenix.org/publications/loginonline/acto-push-button-end-end-testing-operation-correctness-kubernetes-operators" target="_blank">Acto</a>)</p>,
-								and <a href="https://www.usenix.org/publications/loginonline/sieve-chaos-testing-kubernetes-controllers" target="_blank">Sieve</a>, respectively
+								<a href="https://www.usenix.org/publications/loginonline/acto-push-button-end-end-testing-operation-correctness-kubernetes-operators" target="_blank">Acto</a>),
+								and <a href="https://www.usenix.org/publications/loginonline/sieve-chaos-testing-kubernetes-controllers" target="_blank">Sieve</a>, respectively</p>
 							<p class="STYLE223">Wentao and team are giving three talks at LPC 2024 at 
 								<a href="pub/lpc-linux-testing.pdf" target="_blank">the Refereed Track</a>, 
 								<a href="pub/lpc-2024-2.pdf" target="_blank">Kernel Testing & Dependability</a>, 
