--- a/travel.html
+++ b/travel.html
@@ -383,7 +383,7 @@ div.Section1
 						    <li>Buffalo, NY (2023) </li>	  
 						    <li>Carmel-by-the-Sea, CA (2017) </li>
 						    <li>Cheyenne, WY (2018) </li>
-                            			    <li>Chicago, IL (2028--) </li>
+                            			    <li>Chicago, IL (2018--) </li>
 						    <li>Cincinnati, OH (2021) </li>
 						    <li>Clarksville, TN (2021) </li>
 						    <li>Colorado Springs, CO (2023) </li>
@@ -438,6 +438,7 @@ div.Section1
 						    <li>Orlando, FL (2023) </li>
 						    <li>Omaha, NE (2018) </li>
 						    <li>Pasadena, CA (2015) </li>
+				  		    <li>Pittsburgh, PA (2024) </li>
 						    <li>Placerville, CA (2018) </li>
 						    <li>Providence, RI (2023) </li>
 						    <li>Pueblo, CO (2023) </li>
