--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
 	-->
 								<p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shurang Wu</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
+								<p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a>, Undergraduate Student (USTC) (Summer 2024 - now)</p>
 				      <!--
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiajun (Kashun) Cheng</a>, Undergraduate student (ShanghaiTech/Berkeley) (Summer 2023 - now)</p>
 				      -->
