--- a/travel.html
+++ b/travel.html
@@ -365,7 +365,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>United States</b></font>:
                           <ul style="list-style-type:circle">
-							<li>Aberdeen, WA (2018) </li>
+						    <li>Aberdeen, WA (2018) </li>
 						    <li>Albany, NY (2023) </li>
 						    <li>Alexandria, VA (2018) </li>
 						    <li>Annapolis, MD (2017) </li>
@@ -417,6 +417,7 @@ div.Section1
 						    <li>Laramie, WY (2018) </li>
 						    <li>Lexington, KY (2021) </li>
 				  		    <li>Little Rock, AK (2024) </li>
+				  		    <li>Long Island, NY (2024) </li>
 						    <li>Los Angeles, CA (2012, 2016) </li>
 						    <li>Louisville, KY (2021) </li>
 						    <li>Madison, WI (2022) </li>
@@ -450,7 +451,7 @@ div.Section1
 						    <li>San Diego, CA (2011-2017) </li>
 						    <li>San Francisco, CA (2017,2023) </li>
 						    <li>San Jose, CA (2017) </li>
-							<li>San Pablo, CA (2024)</li>
+						    <li>San Pablo, CA (2024)</li>
 						    <li>Sandusky, OH (2021) </li>
 						    <li>Santa Barbara, CA (2017) </li>
 						    <li>Santa Clara, CA (2012, 2015, 2017, 2018, 2024) </li>
@@ -466,12 +467,14 @@ div.Section1
 					            <li>St. Louis, MO (2021) </li>
 						    <li>State College, PA (2017) </li>
 						    <li>Sunnyvale, CA (2012, 2015) </li>
+				  		    <li>Tarrytown, NY (2024) </li>
 				  		    <li>Tulsa, OK (2024) </li>
 						    <li>Champaign-Urbana, IL (2018--)</li>
 						    <li>West Lafayette, IN (2023) </li>
 				  		    <li>White Plains, NY (2022, 2023) </li>
-                          </ul>
-                        </li>
+				  		    <li>Yorktown Heights, NY (2022, 2023, 2024) </li>
+                          			</ul>
+                        			</li>
 						<li><font color="#083b89"><b>Vatican</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Vatican City (2010, 2011)</li>
