--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+				<p class="STYLE223">Rex and Acto are invited for presentation at IBM Research Day</p>
 				<p class="STYLE223">Three USENIX ;login: magazine articles on
 					<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">Anvil</a>, 
 					<a href="https://www.usenix.org/publications/loginonline/acto-push-button-end-end-testing-operation-correctness-kubernetes-operators" target="_blank">Acto</a>,
