William's middle name

--- a/pub.html
+++ b/pub.html
@@ -117,7 +117,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						  <strong>Fidelity of Cloud Emulators: The Imitation Game of Testing Cloud-based Software</strong> [<a href="pub/cloudtest.pdf" target="_blank">pdf</a> | <a href="pub/cloudtest_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Anna Mazhar, Saad Sher Alam, William Zheng, Yinfang Chen, Suman Nath, and Tianyin Xu
+						  Anna Mazhar, Saad Sher Alam, William X. Zheng, Yinfang Chen, Suman Nath, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
 					  	</span>
